# stealth-driver-polymorphic-decoy-regions-EAC-VGK-VAC-ACE

./: README.md
stealth/: CMakeLists.txt  ReadMe  anti_debug.c  anti_debug.h  build.bat  decoy_analysis.c  decoy_patterns.h  decoy_protection.c  decoy_protection.h  device_protection.c  device_protection.h  driver_stealth.c  driver_stealth.h  imgui_integration.c  imgui_integration.h  memory_protection.c  memory_protection.h  polymorphic_engine.c  stealth_core.c  stealth_core.h  stealth_types.h  threat_detection.c  threat_detection.h
stealth/src/: main.c
stealth/src/core/: stealth_engine.c  stealth_engine.h
stealth/src/deception/: decoy_manager.c  decoy_manager.h
stealth/src/driver/: driver.c
stealth/src/loader/: loader.c  loader.h
